--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Woo-Sik's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -13,7 +16,7 @@
     </header>
     <main>
         <div class="title">
-            <h1 id="home">Hello</h1>
+            <h1 id="home">Hello!</h1>
             <h2>My name is Woo-Sik</h1>
         </div>
         <div class="navBar">
