Fixed sticky menu and div padding and margin

--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
         </div>
         <div class="content">
             <div class="about">
-                <h3 id="about">About Woo-Sik</h3>
+                <p id="about">&nbsp;</p>
                 <div class="aboutText">
+                    <h3>About Woo-Sik</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam iure autem cupiditate tenetur illum, quia commodi explicabo, temporibus et, nemo laudantium. Amet consequuntur modi architecto, vitae nemo magni quas suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos aperiam ipsam accusamus maiores asperiores cum obcaecati ipsum laborum dolor, magni eaque quasi dolorem odio, ut saepe voluptates facilis deserunt? Voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis numquam laboriosam qui eos optio est, unde deleniti a exercitationem molestiae laudantium veritatis quae, esse dolorem, nam error facere possimus itaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nihil minus non tenetur explicabo, id facere facilis, eius esse quia nam sequi laborum. Itaque, esse voluptatum quo voluptas iste libero!</p>
                 </div>
             </div>
             <div class="projects">
-                <h3 id="projects">Projects</h3>
+                <p id="projects">&nbsp;</p>
                 <!-- <div class="project4">
                     4
                 </div>
@@ -44,23 +45,27 @@
                     3
                 </div> -->
                 <div class="project2">
-                    2
+                    <h3>Project 2</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque laborum, aliquid voluptas obcaecati rerum commodi magni numquam perferendis eos sequi in dolores, odit ipsa ullam quaerat dicta eligendi possimus facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quia facere atque quam non omnis distinctio placeat molestias rem quo soluta reprehenderit perspiciatis, cupiditate libero laboriosam facilis doloremque sapiente numquam.</p>
                 </div>
                 <div class="project1">
-                    1
+                    <h3>Project 1</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio magnam minus dolores omnis ipsum necessitatibus cumque obcaecati quidem. Nesciunt, nulla voluptatibus! Modi mollitia fuga eum sed nulla, ipsa inventore quo Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatibus eum minus amet, sapiente quos. Nihil impedit quisquam ducimus eius explicabo nulla dolorum, quis vitae at aspernatur culpa doloribus debitis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum necessitatibus, rem, incidunt explicabo tenetur dolores cumque inventore nisi facilis quis illo delectus error officiis dolorem repellat dicta iusto molestias debitis.</p>
                 </div>
             </div>
             <div class="resume">
-                <h3 id="resume">Resume</h3>
+                <p id="resume">&nbsp;</p>
                 <div class="resumeText">
+                    <h3>Resume</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum a vel perferendis illo assumenda repellendus ullam culpa? Aut temporibus pariatur dolore quos voluptates molestias cumque porro eos! Molestias, natus quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quo laudantium illo, quidem doloremque est dolor similique ea accusamus officia quaerat cumque nostrum nihil facere voluptatem aliquam tenetur fugit? Repudiandae? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis dolores quis consectetur impedit voluptatum nam saepe quibusdam asperiores magni? Unde eligendi accusantium sunt distinctio, ipsa maiores. Perferendis nam dolore facere.
                     </p>
                 </div>
             </div>
             <div class="contact">
-                <h3 id="contact">Contact Information</h3>
+                <p id="contact">&nbsp;</p>
                 <div class="contactText">
+                    <h3>Contact Information</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae sed impedit dolor laudantium, magni magnam earum libero incidunt exercitationem omnis nostrum fugiat? Sint ipsam molestiae vero facere nobis, ad ut. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque assumenda officiis tempore sint voluptas voluptate nihil dolor eos cumque dicta! Doloribus facilis veniam ratione. Ut necessitatibus quibusdam illo pariatur obcaecati! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, pariatur aperiam quam placeat perferendis, aliquid aspernatur doloribus sunt dolore consectetur nesciunt eum cum, atque delectus maxime! Accusamus, ut? Voluptatem, molestiae?
                     </p>
@@ -70,7 +75,9 @@
     </main>
     <footer>
         <div class="footerMessage">
-            Updated by Woo-Sik Choi in July 2021 
+            <p>
+                Updated by Woo-Sik Choi in July 2021 
+            </p>
         </div>
     </footer>
     <script src="app.js"></script>
