--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
                 <p id="contact">&nbsp;</p>
                 <div class="contactText">
                     <h3>Contact Information</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae sed impedit dolor laudantium, magni magnam earum libero incidunt exercitationem omnis nostrum fugiat? Sint ipsam molestiae vero facere nobis, ad ut. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque assumenda officiis tempore sint voluptas voluptate nihil dolor eos cumque dicta! Doloribus facilis veniam ratione. Ut necessitatibus quibusdam illo pariatur obcaecati! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, pariatur aperiam quam placeat perferendis, aliquid aspernatur doloribus sunt dolore consectetur nesciunt eum cum, atque delectus maxime! Accusamus, ut? Voluptatem, molestiae?
+                    <a href="https://www.linkedin.com/in/woosikchoi/">LinkedIn: linkedin.com/in/woosikchoi</a>
+                    <a href="https://github.com/dvlprwchoi">GitHub: github.com/dvlprwchoi</a>
+                    <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com">Email: dvlpr.wchoi@gmail.com</a>
                     </p>
                 </div>
             </div>
@@ -76,7 +77,7 @@
     <footer>
         <div class="footerMessage">
             <p>
-                Updated by Woo-Sik Choi in July 2021 
+                Last Updated: July 2021 
             </p>
         </div>
     </footer>
