Add contact icons

--- a/index.html
+++ b/index.html
@@ -71,9 +71,15 @@
                 <p id="contact">&nbsp;</p>
                 <div class="contactText">
                     <h3>Contact Information</h3>
-                    <a href="https://www.linkedin.com/in/woosikchoi/">LinkedIn: linkedin.com/in/woosikchoi</a>
-                    <a href="https://github.com/dvlprwchoi">GitHub: github.com/dvlprwchoi</a>
-                    <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com">Email: dvlpr.wchoi@gmail.com</a>
+                    <div>
+                        <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank"><img src="/img/LI-In-Bug.png" alt="linkedin.com/in/woosikchoi" width="50" height="50">linkedin.com/in/woosikchoi</a>
+                    </div>
+                    <div>
+                        <a href="https://github.com/dvlprwchoi" target="_blank"><img src="/img/GitHub-Mark-120px-plus.png" alt="github.com/dvlprwchoi" width="50" height="50">github.com/dvlprwchoi</a>
+                    </div>
+                    <div>
+                        <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank"><img src="/img/logo-gmail-9952.png" alt="dvlpr.wchoi@gmail.com" width="50" height="50">dvlpr.wchoi@gmail.com</a>
+                    </div>
                     </p>
                 </div>
             </div>
