Add profile picture, responsive

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <main>
         <div class="title">
             <h1 id="home">Hello!</h1>
-            <h2>My name is Woo-Sik</h1>
+            <p>&nbsp;</p>
+            <h2>My name is Woo-Sik Choi</h1>
         </div>
         <div class="navBar">
             <ul>
@@ -37,6 +38,7 @@
             <div class="about">
                 <p id="about">&nbsp;</p>
                 <div class="aboutText">
+                    <img src="/img/Profile Picture.jpg" alt="Woo-Sik's profile picture" width="150px" height="150px">
                     <h3>About Woo-Sik</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam iure autem cupiditate tenetur illum, quia commodi explicabo, temporibus et, nemo laudantium. Amet consequuntur modi architecto, vitae nemo magni quas suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos aperiam ipsam accusamus maiores asperiores cum obcaecati ipsum laborum dolor, magni eaque quasi dolorem odio, ut saepe voluptates facilis deserunt? Voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis numquam laboriosam qui eos optio est, unde deleniti a exercitationem molestiae laudantium veritatis quae, esse dolorem, nam error facere possimus itaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nihil minus non tenetur explicabo, id facere facilis, eius esse quia nam sequi laborum. Itaque, esse voluptatum quo voluptas iste libero!</p>
                 </div>
