Add project 2, 1 img and repo, Update img paths, Add contact img responsive

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="about">
                 <p id="about">&nbsp;</p>
                 <div class="aboutText">
-                    <img src="/img/Profile Picture.jpg" alt="Woo-Sik's profile picture" width="150px" height="150px">
+                    <img src="/img/Profile-Picture.jpg" alt="Woo-Sik's profile picture" width="150px" height="150px">
                     <h3>About Woo-Sik</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam iure autem cupiditate tenetur illum, quia commodi explicabo, temporibus et, nemo laudantium. Amet consequuntur modi architecto, vitae nemo magni quas suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos aperiam ipsam accusamus maiores asperiores cum obcaecati ipsum laborum dolor, magni eaque quasi dolorem odio, ut saepe voluptates facilis deserunt? Voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis numquam laboriosam qui eos optio est, unde deleniti a exercitationem molestiae laudantium veritatis quae, esse dolorem, nam error facere possimus itaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nihil minus non tenetur explicabo, id facere facilis, eius esse quia nam sequi laborum. Itaque, esse voluptatum quo voluptas iste libero!</p>
                 </div>
@@ -53,11 +53,19 @@
                 </div> -->
                 <div class="project2">
                     <h3>Project 2</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque laborum, aliquid voluptas obcaecati rerum commodi magni numquam perferendis eos sequi in dolores, odit ipsa ullam quaerat dicta eligendi possimus facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quia facere atque quam non omnis distinctio placeat molestias rem quo soluta reprehenderit perspiciatis, cupiditate libero laboriosam facilis doloremque sapiente numquam.</p>
+                    <div>
+                        <a href="https://woosik-covid-19-numbers.netlify.app/" target="_blank"><img src="/img/Project-2-Img-20210710.png" alt="Project 2 Screen Shot" width="100%" height="auto"></a>
+                        <a href="https://github.com/dvlprwchoi/covid-19-numbers" target="_blank">githubRepo</a>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque laborum, aliquid voluptas obcaecati rerum commodi magni numquam perferendis eos sequi in dolores, odit ipsa ullam quaerat dicta eligendi possimus facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quia facere atque quam non omnis distinctio placeat molestias rem quo soluta reprehenderit perspiciatis, cupiditate libero laboriosam facilis doloremque sapiente numquam.</p>
+                    </div>
                 </div>
                 <div class="project1">
                     <h3>Project 1</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio magnam minus dolores omnis ipsum necessitatibus cumque obcaecati quidem. Nesciunt, nulla voluptatibus! Modi mollitia fuga eum sed nulla, ipsa inventore quo Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatibus eum minus amet, sapiente quos. Nihil impedit quisquam ducimus eius explicabo nulla dolorum, quis vitae at aspernatur culpa doloribus debitis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum necessitatibus, rem, incidunt explicabo tenetur dolores cumque inventore nisi facilis quis illo delectus error officiis dolorem repellat dicta iusto molestias debitis.</p>
+                    <div>
+                        <a href="https://dvlprwchoi.github.io/omok-game/" target="_blank"><img src="/img/Project-1-Img-20210710.png" alt="Project 1 Screen Shot" width="100%" height="auto"></a>
+                        <a href="https://github.com/dvlprwchoi/omok-game" target="_blank">githubRepo</a>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio magnam minus dolores omnis ipsum necessitatibus cumque obcaecati quidem. Nesciunt, nulla voluptatibus! Modi mollitia fuga eum sed nulla, ipsa inventore quo Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatibus eum minus amet, sapiente quos. Nihil impedit quisquam ducimus eius explicabo nulla dolorum, quis vitae at aspernatur culpa doloribus debitis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum necessitatibus, rem, incidunt explicabo tenetur dolores cumque inventore nisi facilis quis illo delectus error officiis dolorem repellat dicta iusto molestias debitis.</p>
+                    </div>
                 </div>
             </div>
             <div class="resume">
@@ -72,15 +80,18 @@
             <div class="contact">
                 <p id="contact">&nbsp;</p>
                 <div class="contactText">
-                    <h3>Contact Information</h3>
-                    <div>
-                        <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank"><img src="/img/LI-In-Bug.png" alt="linkedin.com/in/woosikchoi" width="50" height="50">linkedin.com/in/woosikchoi</a>
+                    <h3 class="contactTitle">Contact Information</h3>
+                    <div class="linkedin">
+                        <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank"><img src="/img/LI-In-Bug.png" alt="linkedin.com/in/woosikchoi" width="65px" height="58px"></a>
+                        <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank" id="linkedinLinkText">linkedin.com/in/woosikchoi</a>
                     </div>
-                    <div>
-                        <a href="https://github.com/dvlprwchoi" target="_blank"><img src="/img/GitHub-Mark-120px-plus.png" alt="github.com/dvlprwchoi" width="50" height="50">github.com/dvlprwchoi</a>
+                    <div class="github">
+                        <a href="https://github.com/dvlprwchoi" target="_blank"><img src="/img/GitHub-Mark-120px-plus.png" alt="github.com/dvlprwchoi" width="55px" height="55px"></a>
+                        <a href="https://github.com/dvlprwchoi" target="_blank" id="githubLinkText">github.com/dvlprwchoi</a>
                     </div>
-                    <div>
-                        <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank"><img src="/img/logo-gmail-9952.png" alt="dvlpr.wchoi@gmail.com" width="50" height="50">dvlpr.wchoi@gmail.com</a>
+                    <div class="email">
+                        <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank"><img src="/img/Logo-Gmail-9952.png" alt="dvlpr.wchoi@gmail.com" width="55px" height="55px"></a>
+                        <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank" id="emailLinkText">dvlpr.wchoi@gmail.com</a>
                     </div>
                     </p>
                 </div>
