--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     3
                 </div> -->
                 <div class="project2">
-                    <h3>Project 2</h3>
+                    <h3>COVID-19 NUMBERS</h3>
                     <div>
                         <a href="https://woosik-covid-19-numbers.netlify.app/" target="_blank"><img src="img/Project-2-Img-20210710.png" alt="Project 2 Screen Shot" width="100%" height="auto"></a>
                         <a href="https://github.com/dvlprwchoi/covid-19-numbers" target="_blank">githubRepo</a>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="project1">
-                    <h3>Project 1</h3>
+                    <h3>MINI OMOK (오목)</h3>
                     <div>
                         <a href="https://dvlprwchoi.github.io/omok-game/" target="_blank"><img src="img/Project-1-Img-20210710.png" alt="Project 1 Screen Shot" width="100%" height="auto"></a>
                         <a href="https://github.com/dvlprwchoi/omok-game" target="_blank">githubRepo</a>
@@ -82,16 +82,28 @@
                 <div class="contactText">
                     <h3 class="contactTitle">Contact Information</h3>
                     <div class="linkedin">
-                        <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank"><img src="img/LI-In-Bug.png" alt="linkedin.com/in/woosikchoi" width="65px" height="58px"></a>
-                        <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank" id="linkedinLinkText">linkedin.com/in/woosikchoi</a>
+                        <div class="item1">
+                            <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank"><img src="img/LI-In-Bug.png" alt="linkedin.com/in/woosikchoi" width="65px" height="58px"></a>
+                        </div>
+                        <div class="itme2">
+                            <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank" id="linkedinLinkText">linkedin.com/in/woosikchoi</a>
+                        </div>
                     </div>
                     <div class="github">
-                        <a href="https://github.com/dvlprwchoi" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="github.com/dvlprwchoi" width="55px" height="55px"></a>
-                        <a href="https://github.com/dvlprwchoi" target="_blank" id="githubLinkText">github.com/dvlprwchoi</a>
+                        <div class="item3">
+                            <a href="https://github.com/dvlprwchoi" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="github.com/dvlprwchoi" width="55px" height="55px"></a>
+                        </div>
+                        <div class="itme4">
+                            <a href="https://github.com/dvlprwchoi" target="_blank" id="githubLinkText">github.com/dvlprwchoi</a>
+                        </div>
                     </div>
                     <div class="email">
-                        <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank"><img src="img/Logo-Gmail-9952.png" alt="dvlpr.wchoi@gmail.com" width="55px" height="55px"></a>
-                        <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank" id="emailLinkText">dvlpr.wchoi@gmail.com</a>
+                        <div class="item5">
+                            <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank"><img src="img/Logo-Gmail-9952.png" alt="dvlpr.wchoi@gmail.com" width="55px" height="55px"></a>
+                        </div>
+                        <div class="item6">
+                            <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank" id="emailLinkText">dvlpr.wchoi@gmail.com</a>
+                        </div>
                     </div>
                     </p>
                 </div>
