Change content text weight 500, upper case title, github repo icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Font style for .content -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -39,7 +39,7 @@
                 <p id="about">&nbsp;</p>
                 <div class="aboutText">
                     <img src="img/Profile-Picture.jpg" alt="Woo-Sik's profile picture" width="150px" height="150px">
-                    <h3>About Woo-Sik</h3>
+                    <h3>ABOUT WOO-SIK</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam iure autem cupiditate tenetur illum, quia commodi explicabo, temporibus et, nemo laudantium. Amet consequuntur modi architecto, vitae nemo magni quas suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos aperiam ipsam accusamus maiores asperiores cum obcaecati ipsum laborum dolor, magni eaque quasi dolorem odio, ut saepe voluptates facilis deserunt? Voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis numquam laboriosam qui eos optio est, unde deleniti a exercitationem molestiae laudantium veritatis quae, esse dolorem, nam error facere possimus itaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nihil minus non tenetur explicabo, id facere facilis, eius esse quia nam sequi laborum. Itaque, esse voluptatum quo voluptas iste libero!</p>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                     <h3>COVID-19 NUMBERS</h3>
                     <div>
                         <a href="https://woosik-covid-19-numbers.netlify.app/" target="_blank"><img src="img/Project-2-Img-20210710.png" alt="Project 2 Screen Shot" width="100%" height="auto"></a>
-                        <a href="https://github.com/dvlprwchoi/covid-19-numbers" target="_blank">githubRepo</a>
+                        <a href="https://github.com/dvlprwchoi/covid-19-numbers" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="20px" height="20px"></a>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque laborum, aliquid voluptas obcaecati rerum commodi magni numquam perferendis eos sequi in dolores, odit ipsa ullam quaerat dicta eligendi possimus facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quia facere atque quam non omnis distinctio placeat molestias rem quo soluta reprehenderit perspiciatis, cupiditate libero laboriosam facilis doloremque sapiente numquam.</p>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                     <h3>MINI OMOK (오목)</h3>
                     <div>
                         <a href="https://dvlprwchoi.github.io/omok-game/" target="_blank"><img src="img/Project-1-Img-20210710.png" alt="Project 1 Screen Shot" width="100%" height="auto"></a>
-                        <a href="https://github.com/dvlprwchoi/omok-game" target="_blank">githubRepo</a>
+                        <a href="https://github.com/dvlprwchoi/omok-game" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="20px" height="20px"></a>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio magnam minus dolores omnis ipsum necessitatibus cumque obcaecati quidem. Nesciunt, nulla voluptatibus! Modi mollitia fuga eum sed nulla, ipsa inventore quo Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatibus eum minus amet, sapiente quos. Nihil impedit quisquam ducimus eius explicabo nulla dolorum, quis vitae at aspernatur culpa doloribus debitis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum necessitatibus, rem, incidunt explicabo tenetur dolores cumque inventore nisi facilis quis illo delectus error officiis dolorem repellat dicta iusto molestias debitis.</p>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
             <div class="resume">
                 <p id="resume">&nbsp;</p>
                 <div class="resumeText">
-                    <h3>Resume</h3>
+                    <h3>RESUME</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum a vel perferendis illo assumenda repellendus ullam culpa? Aut temporibus pariatur dolore quos voluptates molestias cumque porro eos! Molestias, natus quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quo laudantium illo, quidem doloremque est dolor similique ea accusamus officia quaerat cumque nostrum nihil facere voluptatem aliquam tenetur fugit? Repudiandae? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis dolores quis consectetur impedit voluptatum nam saepe quibusdam asperiores magni? Unde eligendi accusantium sunt distinctio, ipsa maiores. Perferendis nam dolore facere.
                     </p>
@@ -80,7 +80,7 @@
             <div class="contact">
                 <p id="contact">&nbsp;</p>
                 <div class="contactText">
-                    <h3 class="contactTitle">Contact Information</h3>
+                    <h3 class="contactTitle">CONTACT INFORMATION</h3>
                     <div class="linkedin">
                         <div class="item1">
                             <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank"><img src="img/LI-In-Bug.png" alt="linkedin.com/in/woosikchoi" width="65px" height="58px"></a>
@@ -113,7 +113,7 @@
     <footer>
         <div class="footerMessage">
             <p>
-                Last Updated: July 2021 
+                LAST UPDATED: JULY 2021 
             </p>
         </div>
     </footer>
