Add project descriptions, gitRepo class, gitRepo icon css

--- a/index.html
+++ b/index.html
@@ -54,17 +54,21 @@
                 <div class="project2">
                     <h3>COVID-19 NUMBERS</h3>
                     <div>
-                        <a href="https://woosik-covid-19-numbers.netlify.app/" target="_blank"><img src="img/Project-2-Img-20210710.png" alt="Project 2 Screen Shot" width="100%" height="auto"></a>
-                        <a href="https://github.com/dvlprwchoi/covid-19-numbers" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="20px" height="20px"></a>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque laborum, aliquid voluptas obcaecati rerum commodi magni numquam perferendis eos sequi in dolores, odit ipsa ullam quaerat dicta eligendi possimus facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quia facere atque quam non omnis distinctio placeat molestias rem quo soluta reprehenderit perspiciatis, cupiditate libero laboriosam facilis doloremque sapiente numquam.</p>
+                        <a href="https://woosik-covid-19-numbers.netlify.app/" target="_blank"><img class="screenshot" src="img/Project-2-Img-20210710.png" alt="Project 2 Screen Shot" width="100%" height="auto"></a>
+                        <a href="https://github.com/dvlprwchoi/covid-19-numbers" target="_blank"><img class="gitRepo" src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px" height="30px"></a>
+                        <p>
+                            COVID-19 Numbers App shows on-demand COVID related numbers. Technologies used: HTML, CSS, JavaScript, React, 3rd party API. Click the screenshot for playing game or check out the GitHub Repository!
+                        </p>
                     </div>
                 </div>
                 <div class="project1">
                     <h3>MINI OMOK (오목)</h3>
                     <div>
-                        <a href="https://dvlprwchoi.github.io/omok-game/" target="_blank"><img src="img/Project-1-Img-20210710.png" alt="Project 1 Screen Shot" width="100%" height="auto"></a>
-                        <a href="https://github.com/dvlprwchoi/omok-game" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="20px" height="20px"></a>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio magnam minus dolores omnis ipsum necessitatibus cumque obcaecati quidem. Nesciunt, nulla voluptatibus! Modi mollitia fuga eum sed nulla, ipsa inventore quo Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatibus eum minus amet, sapiente quos. Nihil impedit quisquam ducimus eius explicabo nulla dolorum, quis vitae at aspernatur culpa doloribus debitis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum necessitatibus, rem, incidunt explicabo tenetur dolores cumque inventore nisi facilis quis illo delectus error officiis dolorem repellat dicta iusto molestias debitis.</p>
+                        <a href="https://dvlprwchoi.github.io/omok-game/" target="_blank"><img class="screenshot" src="img/Project-1-Img-20210710.png" alt="Project 1 Screen Shot" width="100%" height="auto"></a>
+                        <a href="https://github.com/dvlprwchoi/omok-game" target="_blank"><img class="gitRepo" src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px" height="30px"></a>
+                        <p>
+                            MINI OMOK is a simplified version of Korean game called Omok. To win the game, connect 5 stones with same color in the vertical, horizontal or diagonal direction. Technologies used: HTML, CSS, JavaScript. Click the screenshot for playing game or check out the GitHub Repository!
+                        </p>
                     </div>
                 </div>
             </div>
@@ -73,7 +77,7 @@
                 <div class="resumeText">
                     <h3>RESUME</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum a vel perferendis illo assumenda repellendus ullam culpa? Aut temporibus pariatur dolore quos voluptates molestias cumque porro eos! Molestias, natus quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quo laudantium illo, quidem doloremque est dolor similique ea accusamus officia quaerat cumque nostrum nihil facere voluptatem aliquam tenetur fugit? Repudiandae? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis dolores quis consectetur impedit voluptatum nam saepe quibusdam asperiores magni? Unde eligendi accusantium sunt distinctio, ipsa maiores. Perferendis nam dolore facere.
+                        Link to resume site
                     </p>
                 </div>
             </div>
