--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
 </head>
 <body>
     <header>
@@ -40,7 +44,9 @@
                 <div class="aboutText">
                     <img src="img/Profile-Picture.jpg" alt="Woo-Sik's profile picture" width="150px" height="150px">
                     <h3>ABOUT WOO-SIK</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam iure autem cupiditate tenetur illum, quia commodi explicabo, temporibus et, nemo laudantium. Amet consequuntur modi architecto, vitae nemo magni quas suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos aperiam ipsam accusamus maiores asperiores cum obcaecati ipsum laborum dolor, magni eaque quasi dolorem odio, ut saepe voluptates facilis deserunt? Voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis numquam laboriosam qui eos optio est, unde deleniti a exercitationem molestiae laudantium veritatis quae, esse dolorem, nam error facere possimus itaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nihil minus non tenetur explicabo, id facere facilis, eius esse quia nam sequi laborum. Itaque, esse voluptatum quo voluptas iste libero!</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, obcaecati? Minus, iure corporis voluptatem quasi nihil fugiat ullam ratione fuga eveniet obcaecati expedita velit molestiae blanditiis accusantium aspernatur voluptatibus autem.    
+                    </p>
                 </div>
             </div>
             <div class="projects">
