Modify contactText div structure and icon alignment for responsive and regular screen

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <img src="img/Profile-Picture.jpg" alt="Woo-Sik's profile picture" width="150px" height="150px">
                     <h3>ABOUT WOO-SIK</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, obcaecati? Minus, iure corporis voluptatem quasi nihil fugiat ullam ratione fuga eveniet obcaecati expedita velit molestiae blanditiis accusantium aspernatur voluptatibus autem.    
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos eum deserunt delectus! Blanditiis dolorem doloremque, eaque unde magnam aperiam vitae non voluptatum iure a ipsa laborum. Natus, explicabo ipsum.
                     </p>
                 </div>
             </div>
@@ -91,30 +91,24 @@
                 <p id="contact">&nbsp;</p>
                 <div class="contactText">
                     <h3 class="contactTitle">CONTACT INFORMATION</h3>
-                    <div class="linkedin">
                         <div class="item1">
                             <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank"><img src="img/LI-In-Bug.png" alt="linkedin.com/in/woosikchoi" width="65px" height="58px"></a>
                         </div>
-                        <div class="itme2">
-                            <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank" id="linkedinLinkText">linkedin.com/in/woosikchoi</a>
+                        <div class="item2">
+                            <a href="https://www.linkedin.com/in/woosikchoi" target="_blank" id="linkedinLinkText">linkedin.com/in/woosikchoi</a>
                         </div>
-                    </div>
-                    <div class="github">
                         <div class="item3">
-                            <a href="https://github.com/dvlprwchoi" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="github.com/dvlprwchoi" width="55px" height="55px"></a>
+                            <a href="https://www.github.com/dvlprwchoi" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="github.com/dvlprwchoi" width="55px" height="55px"></a>
                         </div>
-                        <div class="itme4">
-                            <a href="https://github.com/dvlprwchoi" target="_blank" id="githubLinkText">github.com/dvlprwchoi</a>
+                        <div class="item4">
+                            <a href="https://www.github.com/dvlprwchoi" target="_blank" id="githubLinkText">github.com/dvlprwchoi</a>
                         </div>
-                    </div>
-                    <div class="email">
                         <div class="item5">
                             <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank"><img src="img/Logo-Gmail-9952.png" alt="dvlpr.wchoi@gmail.com" width="55px" height="55px"></a>
                         </div>
                         <div class="item6">
                             <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank" id="emailLinkText">dvlpr.wchoi@gmail.com</a>
                         </div>
-                    </div>
                     </p>
                 </div>
             </div>
