--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,6 +20,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
     <link rel="manifest" href="favicon_io/site.webmanifest">
 </head>
+
 <body>
     <header>
 
@@ -31,11 +33,11 @@
         </div>
         <div class="navBar">
             <ul>
-                <li><a href = "#home">HOME</a></li>
-                <li><a href = "#about">ABOUT</a></li>
-                <li><a href = "#projects">PROJECTS</a></li>
-                <li><a href = "#resume">RESUME</a></li>
-                <li><a href = "#contact">CONTACT</a></li>
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#projects">PROJECTS</a></li>
+                <li><a href="#resume">RESUME</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
         </div>
         <div class="content">
@@ -45,8 +47,24 @@
                     <img src="img/Profile-Picture.jpg" alt="Woo-Sik's profile picture" width="150px" height="150px">
                     <h3>ABOUT WOO-SIK</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos eum deserunt delectus! Blanditiis dolorem doloremque, eaque unde magnam aperiam vitae non voluptatum iure a ipsa laborum. Natus, explicabo ipsum.
+                        I am a software developer with a background with STEM education and cancer related research as
+                        well as the Army nursing.<br>&nbsp;<br>
+                        I am a critical thinker and like to pay attention to details.<br>&nbsp;<br>
+                        I play the violin and love to cook.<br>&nbsp;<br>
+                        I also enjoy building and fixing stuff.
                     </p>
+                    <div class="skills">
+                        <h4>SKILLS</h4>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>MongoDB</li>
+                            <li>Mongoose</li>
+                            <li>Git</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="projects">
@@ -60,20 +78,33 @@
                 <div class="project2">
                     <h3>COVID-19 NUMBERS</h3>
                     <div>
-                        <a href="https://woosik-covid-19-numbers.netlify.app/" target="_blank"><img class="screenshot" src="img/Project-2-Img-20210710.png" alt="Project 2 Screen Shot" width="100%" height="auto"></a>
-                        <a href="https://github.com/dvlprwchoi/covid-19-numbers" target="_blank"><img class="gitRepo" src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px" height="30px"></a>
+                        <a href="https://woosik-covid-19-numbers.netlify.app/" target="_blank"><img class="screenshot"
+                                src="img/Project-2-Img-20210710.png" alt="Project 2 Screen Shot" width="100%"
+                                height="auto"></a>
+                        <a href="https://github.com/dvlprwchoi/covid-19-numbers" target="_blank"><img class="gitRepo"
+                                src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
+                                height="30px"></a>
                         <p>
-                            COVID-19 Numbers App shows on-demand COVID related numbers. Technologies used: HTML, CSS, JavaScript, React, 3rd party API. Click the screenshot for playing game or check out the GitHub Repository!
+                            COVID-19 Numbers App shows on-demand COVID related numbers. Technologies used: HTML, CSS,
+                            JavaScript, React, 3rd party API. Click the screenshot for playing game or check out the
+                            GitHub Repository!
                         </p>
                     </div>
                 </div>
                 <div class="project1">
                     <h3>MINI OMOK (오목)</h3>
                     <div>
-                        <a href="https://dvlprwchoi.github.io/omok-game/" target="_blank"><img class="screenshot" src="img/Project-1-Img-20210710.png" alt="Project 1 Screen Shot" width="100%" height="auto"></a>
-                        <a href="https://github.com/dvlprwchoi/omok-game" target="_blank"><img class="gitRepo" src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px" height="30px"></a>
+                        <a href="https://dvlprwchoi.github.io/omok-game/" target="_blank"><img class="screenshot"
+                                src="img/Project-1-Img-20210710.png" alt="Project 1 Screen Shot" width="100%"
+                                height="auto"></a>
+                        <a href="https://github.com/dvlprwchoi/omok-game" target="_blank"><img class="gitRepo"
+                                src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
+                                height="30px"></a>
                         <p>
-                            MINI OMOK is a simplified version of Korean game called Omok. To win the game, connect 5 stones with same color in the vertical, horizontal or diagonal direction. Technologies used: HTML, CSS, JavaScript. Click the screenshot for playing game or check out the GitHub Repository!
+                            MINI OMOK is a simplified version of Korean game called Omok. To win the game, connect 5
+                            stones with same color in the vertical, horizontal or diagonal direction. Technologies used:
+                            HTML, CSS, JavaScript. Click the screenshot for playing game or check out the GitHub
+                            Repository!
                         </p>
                     </div>
                 </div>
@@ -91,25 +122,32 @@
                 <p id="contact">&nbsp;</p>
                 <div class="contactText">
                     <h3 class="contactTitle">CONTACT INFORMATION</h3>
-                        <div class="item1">
-                            <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank"><img src="img/LI-In-Bug.png" alt="linkedin.com/in/woosikchoi" width="65px" height="58px"></a>
-                        </div>
-                        <div class="item2">
-                            <a href="https://www.linkedin.com/in/woosikchoi" target="_blank" id="linkedinLinkText">linkedin.com/in/woosikchoi</a>
-                        </div>
-                        <div class="item3">
-                            <a href="https://www.github.com/dvlprwchoi" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="github.com/dvlprwchoi" width="55px" height="55px"></a>
-                        </div>
-                        <div class="item4">
-                            <a href="https://www.github.com/dvlprwchoi" target="_blank" id="githubLinkText">github.com/dvlprwchoi</a>
-                        </div>
-                        <div class="item5">
-                            <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank"><img src="img/Logo-Gmail-9952.png" alt="dvlpr.wchoi@gmail.com" width="55px" height="55px"></a>
-                        </div>
-                        <div class="item6">
-                            <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank" id="emailLinkText">dvlpr.wchoi@gmail.com</a>
-                        </div>
-                    </p>
+                    <div class="item1">
+                        <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank"><img src="img/LI-In-Bug.png"
+                                alt="linkedin.com/in/woosikchoi" width="65px" height="58px"></a>
+                    </div>
+                    <div class="item2">
+                        <a href="https://www.linkedin.com/in/woosikchoi" target="_blank"
+                            id="linkedinLinkText">linkedin.com/in/woosikchoi</a>
+                    </div>
+                    <div class="item3">
+                        <a href="https://www.github.com/dvlprwchoi" target="_blank"><img
+                                src="img/GitHub-Mark-120px-plus.png" alt="github.com/dvlprwchoi" width="55px"
+                                height="55px"></a>
+                    </div>
+                    <div class="item4">
+                        <a href="https://www.github.com/dvlprwchoi" target="_blank"
+                            id="githubLinkText">github.com/dvlprwchoi</a>
+                    </div>
+                    <div class="item5">
+                        <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank"><img
+                                src="img/Logo-Gmail-9952.png" alt="dvlpr.wchoi@gmail.com" width="55px"
+                                height="55px"></a>
+                    </div>
+                    <div class="item6">
+                        <a href="mailto:dvlpr.wchoi@gmail.com?subject=Mail from woosikchoi.com" target="_blank"
+                            id="emailLinkText">dvlpr.wchoi@gmail.com</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -117,10 +155,11 @@
     <footer>
         <div class="footerMessage">
             <p>
-                LAST UPDATED: JULY 2021 
+                LAST UPDATED: JULY 2021
             </p>
         </div>
     </footer>
     <script src="app.js"></script>
 </body>
+
 </html>
