Add construction img and minor changes

--- a/index.html
+++ b/index.html
@@ -71,12 +71,23 @@
                 <p id="projects">&nbsp;</p>
                 <!-- <div class="project4">
                     4
-                </div>
-                <div class="project3">
-                    3
                 </div> -->
+                <div class="project3">
+                    <h3>GITNOMS (COMMING SOON)</h3>
+                    <div>
+                        <a href="#" target="_blank"><img class="screenshot"
+                                src="img/construction-icon.png" alt="Project 3 Screen Shot" width="269"
+                                height="153.06"></a>
+                        <a href="#" target="_blank"><img class="gitRepo"
+                                src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
+                                height="30px"></a>
+                        <p>
+                            The gitNoms is an online recipe application. Users can easily upload, edit, or delete their own receipes. This project was a group project with 3 other developers. Technologies used: HTML, CSS, JavaScript, React, MongoDB, Mongoose. Click the screenshot for active link or check out the GitHub Repository!
+                        </p>
+                    </div>
+                </div>
                 <div class="project2">
-                    <h3>COVID-19 NUMBERS</h3>
+                    <h3>COVID-19 NUMBERS APP</h3>
                     <div>
                         <a href="https://woosik-covid-19-numbers.netlify.app/" target="_blank"><img class="screenshot"
                                 src="img/Project-2-Img-20210710.png" alt="Project 2 Screen Shot" width="100%"
@@ -85,8 +96,8 @@
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
-                            COVID-19 Numbers App shows on-demand COVID related numbers. Technologies used: HTML, CSS,
-                            JavaScript, React, 3rd party API. Click the screenshot for playing game or check out the
+                            The COVID-19 Numbers App shows on-demand COVID related numbers. Technologies used: HTML, CSS,
+                            JavaScript, React, 3rd party API. Click the screenshot for active link or check out the
                             GitHub Repository!
                         </p>
                     </div>
@@ -101,7 +112,7 @@
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
-                            MINI OMOK is a simplified version of Korean game called Omok. To win the game, connect 5
+                            The MINI OMOK is a simplified version of Korean game called Omok. To win the game, connect 5
                             stones with same color in the vertical, horizontal or diagonal direction. Technologies used:
                             HTML, CSS, JavaScript. Click the screenshot for playing game or check out the GitHub
                             Repository!
