--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         I am a software developer with a background with STEM education and cancer related research as
                         well as the Army nursing.<br>&nbsp;<br>
                         I am a critical thinker and like to pay attention to details.<br>&nbsp;<br>
-                        I play the violin and love to cook.<br>&nbsp;<br>
+                        I play the violin and love cooking, running, swimming, biking, and skiing.<br>&nbsp;<br>
                         I also enjoy building and fixing stuff.
                     </p>
                     <div class="skills">
@@ -82,7 +82,7 @@
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
-                            The gitNoms is an online recipe application. Users can easily upload, edit, or delete their own receipes. This project was a group project with 3 other developers. Technologies used: HTML, CSS, JavaScript, React, MongoDB, Mongoose. Click the screenshot for active link or check out the GitHub Repository!
+                            The gitNoms is an online recipe application. Users can easily upload, edit, or delete their own receipes. This full-stack application project was a group project with 3 other developers. Technologies used: HTML, CSS, JavaScript, React, MongoDB, and Mongoose. Click the screenshot for active link or check out the GitHub Repository!
                         </p>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                                 height="30px"></a>
                         <p>
                             The COVID-19 Numbers App shows on-demand COVID related numbers. Technologies used: HTML, CSS,
-                            JavaScript, React, 3rd party API. Click the screenshot for active link or check out the
+                            JavaScript, React, and 3rd party API. Click the screenshot for active link or check out the
                             GitHub Repository!
                         </p>
                     </div>
@@ -114,7 +114,7 @@
                         <p>
                             The MINI OMOK is a simplified version of Korean game called Omok. To win the game, connect 5
                             stones with same color in the vertical, horizontal or diagonal direction. Technologies used:
-                            HTML, CSS, JavaScript. Click the screenshot for playing game or check out the GitHub
+                            HTML, CSS, and JavaScript. Click the screenshot for playing game or check out the GitHub
                             Repository!
                         </p>
                     </div>
