--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
-                            The gitNoms is an online recipe application. Users can easily upload, edit, or delete their own receipes. This full-stack application project was a group project with 3 other developers. Technologies used: HTML, CSS, JavaScript, React, MongoDB, and Mongoose. Click the screenshot for active link or check out the GitHub Repository!
+                            The gitNoms is an online recipe application. Users can easily upload, edit, or delete their own receipes. This full-stack application project was a group project with 3 other developers. Technologies used: HTML, CSS, JavaScript, React, MongoDB, and Mongoose. CLICK the screenshot for active link or check out my GitHub Repository!
                         </p>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                                 height="30px"></a>
                         <p>
                             The COVID-19 Numbers App shows on-demand COVID related numbers. Technologies used: HTML, CSS,
-                            JavaScript, React, and 3rd party API. Click the screenshot for active link or check out the
+                            JavaScript, React, and 3rd party API. CLICK the screenshot for active link or check out my
                             GitHub Repository!
                         </p>
                     </div>
@@ -114,7 +114,7 @@
                         <p>
                             The MINI OMOK is a simplified version of Korean game called Omok. To win the game, connect 5
                             stones with same color in the vertical, horizontal or diagonal direction. Technologies used:
-                            HTML, CSS, and JavaScript. Click the screenshot for playing game or check out the GitHub
+                            HTML, CSS, and JavaScript. CLICK the screenshot for playing game or check out my GitHub
                             Repository!
                         </p>
                     </div>
