--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
         <div class="title">
             <h1 id="home">Hello!</h1>
             <p>&nbsp;</p>
-            <h2>My name is Woo-Sik Choi</h1>
+            <h2>My name is Woo-Sik Choi</h2>
+            <p>&nbsp;</p>
+            <div class="location">
+                <img src="img/pin-icon-light-128.png" alt="Location pin logo" width="30px" height="auto">
+                <h4>Austin, TX</h4>
+            </div>
         </div>
         <div class="navBar">
             <ul>
