--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Woo-Sik's Portfolio</title>
-    <!-- Font style for .title -->
     <link rel="stylesheet" href="style.css">
+    <!-- Font style for .title -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500;700&display=swap" rel="stylesheet">
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
@@ -30,6 +31,7 @@
             <h1 id="home">Hello!</h1>
             <p>&nbsp;</p>
             <h2>My name is Woo-Sik Choi</h2>
+            <button id="switch">Dark/Light Mode Switch</button>
             <p>&nbsp;</p>
             <div class="location">
                 <img src="img/pin-icon-light-128.png" alt="Location pin logo" width="30px" height="auto">
